# workspace

./: .env.  .env.dist  .gitignore  Cargo.toml  README.md  schema.sql
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
migrations/2024-03-04-134318_create_birds/: up.sql
migrations/2024-03-04-135535_create_bird_sightings/: up.sql
sql/: init.sql
src/: config.rs  controller.rs  database.rs  delete.sql  handler.rs  init.sql  main.rs  models.rs  router.rs  schema.rs
