[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.0", features = ["mysql", "chrono", "r2d2"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
axum = "0.7.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.75"
tower-http = { version = "0.5.0", features = ["full"] }
shuttle-axum = "0.40.0"
shuttle-runtime = "0.40.0"
tracing = "0.1.40"
shuttle-secrets = "0.40.0"
rand = "0.8.5"
serde_json = "1.0.113"
