[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
dotenv = "0.15.0"
chrono = "0.4.35"
chrono-tz = "0.8.6"
